<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginTop="8dp"
        android:text="@string/import_privkey_fragment_private_key"
        android:textColor="#000"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/import_privkey_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal"
        android:hint="@string/import_privkey_fragment_private_key_hint"
        android:lines="2"
        android:maxLines="3"
        android:textColor="#000"
        android:textSize="@dimen/font_size_normal" />

    <TextView
        android:id="@+id/import_privkey_bip38_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginTop="8dp"
        android:text="@string/import_privkey_fragment_bip38"
        android:textColor="#000"
        android:visibility="gone"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/import_privkey_bip38_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal"
        android:hint="@string/import_privkey_fragment_bip38_hint"
        android:singleLine="true"
        android:textColor="#000"
        android:visibility="gone"
        android:textSize="@dimen/font_size_normal"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/import_privkey_bip38_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginTop="8dp"
        android:text="@string/import_privkey_fragment_bip38_warning"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_size_small"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/import_privkey_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginTop="8dp"
        android:text="@string/edit_address_book_entry_dialog_address_label"
        android:textColor="#000"
        android:visibility="gone"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/import_privkey_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:visibility="gone"
        android:maxLines="3"
        android:textSize="@dimen/font_size_small" />

    <!-- stretch dummy -->

    <ImageView
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/send_coins_direct_payment_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_entry_padding_vertical"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:textSize="@dimen/font_size_normal" />

    <include layout="@layout/import_privkey_buttons_include" />

</LinearLayout>